--- a/anime.html
+++ b/anime.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=hea, initial-scale=1.0">
     <title>Animes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="pixel.webp" alt="">
+        <img src="imagens/pixel.webp" alt="">
+
 
         <nav>
             <a href="#">Animes</a>
@@ -20,5 +25,14 @@
 
         </nav>
     </header>
-</body>
+
+    <h1>Marco Bruno</h1>
+    <h2>FrontEnd Developer</h2>
+
+   <!--  <nav>
+        <a class="button" href="#">Download CV</a>
+        <a class="button" href="#">Contatos</a>
+    </nav> -->
+
+  </body>
 </html>
